Remove Base64Decorder class