@@ -16,15 +16,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Service;
-import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Decoder;
 
 import java.io.FileOutputStream;
 import java.io.OutputStream;
 import java.sql.SQLIntegrityConstraintViolationException;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 
 @Service
 @PropertySource("classpath:common.properties")
@@ -208,8 +205,8 @@ public class CategoryServiceImpl implements CategoryService {
 
     public void resourceFileSave(ResourceFile resourceFile) throws Exception{
         String filePath = env.getProperty("file.category-image-path") + resourceFile.getFileName();
-        BASE64Decoder base64Decoder = new BASE64Decoder();
-        byte[] resFile = base64Decoder.decodeBuffer(resourceFile.getBase64String());
+//        BASE64Decoder base64Decoder = new BASE64Decoder();
+        byte[] resFile = Base64.getDecoder().decode(resourceFile.getBase64String());
         OutputStream outputStream = new FileOutputStream(filePath);
         outputStream.write(resFile);
     }
